# pyside2-template

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  run_app.py  template.py
.github/: README.md
projectslug/: __init__.py  about.py  local_app.py  logger.py  main.py
projectslug/mock/: __init__.py  nuke.py
projectslug/widgets/: __init__.py  error_dialog.py  toolbar.py
scripts/: substitute_placeholders.py
src/: main.py
tests/: conftest.py  test_main.py
