[tool.poetry]
name = "projectslug"
version = "0.2.0"
description = "FIXME: Add a description"
authors = ["FIXME: Add your name"]

[tool.poetry.scripts]
app = "run_app:main"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
skip_covered = true
skip_empty = true

[tool.coverage.paths]
source = ["projectslug/*"]

[tool.coverage.html]
directory = "coverage"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-x -l --tb=short --strict-markers --cov=projectslug"
qt_api = "pyside2"

[tool.poetry.dependencies]
python = "~3.9"
PySide2 = "~5.15"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-qt = "*"
pytest-cov = "*"
pytest-repeat = "*"
pytest-randomly = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
